small bug fix + increased padding on mobile submit button

--- a/donate/sustaining/mobile.css
+++ b/donate/sustaining/mobile.css
@@ -155,7 +155,7 @@ input[type="radio"] {
 }
 
 #donation-information .designated-amount-label {
-  width: 107px;
+  width: 117px;
 }
 
 .checkbox-label {
@@ -259,7 +259,7 @@ input[type="radio"] {
 #donate-submit {
   display: block;
   width: 100%;
-  padding: 6px 19px;
+  padding: 12px 19px;
   margin-bottom: 0;
   font-size: 24px;
   text-align: center;
